# ruma

crates/ruma-api-macros/src/: request.rs  response.rs
crates/ruma-api-macros/src/request/: incoming.rs  outgoing.rs
crates/ruma-api-macros/src/response/: incoming.rs  outgoing.rs
crates/ruma-api/src/: body.rs  lib.rs
crates/ruma-api/tests/: conversions.rs  manual_endpoint_impl.rs  no_fields.rs
crates/ruma-api/tests/ui/: 03-move-value.rs  05-request-only.rs
crates/ruma-client-api/src/r0/: backup.rs
crates/ruma-client-api/src/r0/directory/: get_public_rooms.rs
crates/ruma-client-api/src/r0/filter/: create_filter.rs
crates/ruma-client-api/src/r0/message/: get_message_events.rs
crates/ruma-client-api/src/r0/state/: get_state_events_for_key.rs
crates/ruma-client/src/: lib.rs
crates/ruma-common/src/: encryption.rs
crates/ruma-events/src/key/verification/: accept.rs  start.rs
crates/ruma-events/src/room/: third_party_invite.rs
crates/ruma-federation-api/src/: discovery.rs
crates/ruma-federation-api/src/keys/claim_keys/: v1.rs
crates/ruma-identity-service-api/src/keys/check_public_key_validity/: v2.rs
crates/ruma-identity-service-api/src/keys/get_public_key/: v2.rs
crates/ruma-identity-service-api/src/keys/validate_ephemeral_key/: v2.rs
crates/ruma-serde/src/: base64.rs
crates/ruma-signatures/src/: functions.rs  lib.rs
crates/ruma-state-res/src/: event_auth.rs
crates/ruma/examples/: joke_bot.rs
examples/joke_bot/: Cargo.toml  README.md
examples/joke_bot/src/: main.rs
samples/: README.md
samples/joke_bot/: Cargo.toml  README.md
samples/joke_bot/src/: main.rs
